@@ -502,79 +502,79 @@ func TestCgrCfgJSONDefaultsCacheCFG(t *testing.T) {
 	eCacheCfg := &CacheCfg{
 		Partitions: map[string]*CacheParamCfg{
 			utils.CacheDestinations: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheReverseDestinations: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheRatingPlans: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheRatingProfiles: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheActions: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheActionPlans: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheAccountActionPlans: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheActionTriggers: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheSharedGroups: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTimings: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheResourceProfiles: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheResources: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheEventResources: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false},
+				TTL: 0, StaticTTL: false},
 			utils.CacheStatQueueProfiles: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheStatQueues: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheThresholdProfiles: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheThresholds: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheFilters: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheRouteProfiles: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheAttributeProfiles: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheChargerProfiles: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheDispatcherProfiles: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheRateProfiles: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheDispatcherHosts: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheResourceFilterIndexes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheStatFilterIndexes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheThresholdFilterIndexes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheRouteFilterIndexes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheAttributeFilterIndexes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheChargerFilterIndexes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheDispatcherFilterIndexes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheRateProfilesFilterIndexes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheRateFilterIndexes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheReverseFilterIndexes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheDispatcherRoutes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheDispatcherLoads: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheDispatchers: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheDiameterMessages: {Limit: -1,
 				TTL: time.Duration(3 * time.Hour), StaticTTL: false},
 			utils.CacheRPCResponses: {Limit: 0,
@@ -586,64 +586,66 @@ func TestCgrCfgJSONDefaultsCacheCFG(t *testing.T) {
 			utils.CacheCDRIDs: {Limit: -1,
 				TTL: time.Duration(10 * time.Minute), StaticTTL: false},
 			utils.CacheLoadIDs: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheRPCConnections: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false},
+				TTL: 0, StaticTTL: false},
 			utils.CacheUCH: {Limit: -1,
 				TTL: time.Duration(3 * time.Hour), StaticTTL: false},
 			utils.CacheSTIR: {Limit: -1,
 				TTL: time.Duration(3 * time.Hour), StaticTTL: false},
 
 			utils.CacheVersions: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheAccounts: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPTimings: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPDestinations: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPRates: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPDestinationRates: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPRatingPlans: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPRatingProfiles: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPSharedGroups: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPActions: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPActionPlans: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPActionTriggers: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPAccountActions: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPResources: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPStats: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPThresholds: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPFilters: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheSessionCostsTBL: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheCDRsTBL: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPRoutes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPAttributes: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPChargers: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPDispatchers: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPDispatcherHosts: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
 			utils.CacheTBLTPRateProfiles: {Limit: -1,
-				TTL: time.Duration(0), StaticTTL: false, Precache: false},
+				TTL: 0, StaticTTL: false, Precache: false},
+			utils.MetaAPIBan: {Limit: -1,
+				TTL: 2 * time.Minute, StaticTTL: false, Precache: false},
 		},
 		ReplicationConns: []string{},
 	}
@@ -1902,7 +1904,7 @@ func TestCgrCdfEventReader(t *testing.T) {
 				Type:             utils.META_NONE,
 				FieldSep:         ",",
 				HeaderDefineChar: ":",
-				RunDelay:         time.Duration(0),
+				RunDelay:         0,
 				ConcurrentReqs:   1024,
 				SourcePath:       "/var/spool/cgrates/ers/in",
 				ProcessedPath:    "/var/spool/cgrates/ers/out",
@@ -2198,7 +2200,7 @@ func TestCgrCfgEventReaderDefault(t *testing.T) {
 		Type:             utils.META_NONE,
 		FieldSep:         ",",
 		HeaderDefineChar: ":",
-		RunDelay:         time.Duration(0),
+		RunDelay:         0,
 		ConcurrentReqs:   1024,
 		SourcePath:       "/var/spool/cgrates/ers/in",
 		ProcessedPath:    "/var/spool/cgrates/ers/out",
